# text-editor

./: .gitmodules  README.md
notepad-imgui/: CMakeLists.txt  main.cc
